# lamia-cloud

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/: __init__.py  _version.py  contracts.py  file_sync.py  gcp.py  interfaces.py  loader.py  types.py
src/gcp/: README.md  __init__.py  deployer.py  scheduler.py  trigger_provider.py  vertex.py  workflow_generator.py
src/lamia_cloud/: deployer.py  gcp.py
src/templates/: Dockerfile  main.py
tests/: test_deployer.py  test_file_sync.py  test_gcp.py  test_llm_adapter.py  test_loader.py  test_quickstart.py  test_remote_cli.py  test_trigger_provider.py  test_workflow_generator.py
