[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lamia-cloud"
dynamic = ["version"]
description = "Cloud execution backend for Lamia: run once with --remote, schedule jobs, and with cloud triggers."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["lamia", "llm", "agentic automation", "cloud scheduler", "gcp", "serverless", "workflow automation", "python automation"]
authors = [
    {name = "Sergey Sargsyan"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "lamia-lang>=0.1.0",
    "google-cloud-scheduler>=2.13.0",
    "google-cloud-build>=3.20.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-service-usage>=1.8.0",
    "google-cloud-iam>=2.16.0",
    "google-cloud-resource-manager>=1.3.0",
    "google-cloud-logging>=3.8.0",
    "google-cloud-eventarc>=1.11.0",
    "google-cloud-monitoring>=2.16.0",
    "google-cloud-workflows>=1.14.0",
    "google-cloud-pubsub>=2.19.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/lamia-lang/lamia-cloud"
Repository = "https://github.com/lamia-lang/lamia-cloud"
Issues = "https://github.com/lamia-lang/lamia-cloud/issues"

[tool.setuptools]
package-dir = {"lamia_cloud" = "src", "lamia_cloud.gcp" = "src/gcp"}
packages = ["lamia_cloud", "lamia_cloud.gcp"]

[tool.setuptools.package-data]
lamia_cloud = ["templates/*"]

[tool.setuptools_scm]
version_file = "src/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
